changing view main

--- a/src/views/html/moderator/createChannel.ejs
+++ b/src/views/html/moderator/createChannel.ejs
@@ -47,13 +47,11 @@
 			</div><!--//container-fluid-->
 		</div><!--//app-content-->
 
-		<footer class="app-footer">
+		<footer class="app-footer fixed-bottom">
 			<div class="container text-center py-3">
-				<!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
-				<small class="copyright">Designed with <span class="sr-only">love</span><i class="fas fa-heart"
-						style="color: #fb866a;"></i> by <a class="app-link" href="http://themes.3rdwavemedia.com"
-						target="_blank">Xiaoying Riley</a> for developers</small>
-
+				 <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
+			<small class="copyright">Design por <i class="fas fa-heart" style="color: #fb866a;"></i> <a class="app-link" href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a></small>
+			   
 			</div>
 		</footer><!--//app-footer-->
 
@@ -72,25 +70,26 @@
 	<script>
 		
         async function createChannel() {
-            const channelData = {
-                name: document.getElementById('channelName').value,
-                description: document.getElementById('channelDescription').value
-            };
+			const channelData = {
+				name: document.getElementById('channelName').value,
+				description: document.getElementById('channelDescription').value
+			};
 
-            const response = await fetch('/api/channels', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(channelData)
-            });
+			const response = await fetch('/api/channels', {
+				method: 'POST',
+				headers: {
+					'Content-Type': 'application/json'
+				},
+				body: JSON.stringify(channelData)
+			});
 
-            if (response.ok) {
-                alert('Canal criado com sucesso!');
-            } else {
-                alert('Erro ao criar canal.');
-            }
-        }
+			if (response.ok) {
+				alert('Canal criado com sucesso!');
+			} else {
+				alert('Erro ao criar canal.');
+			}
+		}
+
 	</script>
 	</body>
 
