--- a/src/views/html/moderator/index.ejs
+++ b/src/views/html/moderator/index.ejs
@@ -125,13 +125,13 @@
 									</table>
 								</div><!--//table-responsive-->
 
-								<a href="http://localhost:3000/index/adm/canal">
-									<button class="btn btn-primary mt-3 mb-2 mx-2 text-white">
+								<a href="/index/channel/create">
+									<button class="btn btn-primary 	mt-3 mb-2 mx-2 text-white">
 										Criar Canal
 									</button>
 								</a>
 
-								<a href="http://localhost:3000/index/adm/logTemp">
+								<a href="/index/adm/logTemp">
 									<button class="btn btn-primary mt-3 mb-2 mx-2 text-white">
 										Log Temperatura (Fins de Teste)
 									</button>
@@ -162,14 +162,11 @@
 
 			</div><!--//container-fluid-->
 		</div><!--//app-content-->
-
-		<footer class="app-footer">
+		<footer class="app-footer fixed-bottom">
 			<div class="container text-center py-3">
-				<!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
-				<small class="copyright">Designed with <span class="sr-only">love</span><i class="fas fa-heart"
-						style="color: #fb866a;"></i> by <a class="app-link" href="http://themes.3rdwavemedia.com"
-						target="_blank">Xiaoying Riley</a> for developers</small>
-
+				 <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
+			<small class="copyright">Design por <i class="fas fa-heart" style="color: #fb866a;"></i> <a class="app-link" href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a></small>
+			   
 			</div>
 		</footer><!--//app-footer-->
 
