--- a/src/views/html/moderator/index.ejs
+++ b/src/views/html/moderator/index.ejs
@@ -114,7 +114,7 @@
 													<td><a href="<%= `/index/channel/${dados[i].id}/edit_view`%>"><button
 																class="btn btn-primary mx-3 text-white">Edit</button></a></td>
 													<td><a
-															href="<%= `/api/channels/delet/${dados[i].id}/${userId}`%>"><button
+															href="<%= `/api/channels/delet/${dados[i].id}`%>"><button
 																class="btn btn-danger">Delete</button></a></td>
 
 												</tr>
