--- a/src/views/html/moderator/edit_sensor.ejs
+++ b/src/views/html/moderator/edit_sensor.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Portal - Bootstrap 5 Admin Dashboard Template For Developers</title>
+	<title>Editar sensor</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -82,7 +82,7 @@
 
 		<footer class="app-footer fixed-bottom">
 	    <div class="container text-center py-3">
-        <small class="copyright">Design por <i class="fas fa-heart" style="color: #fb866a;"></i> <a class="app-link" href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a></small>
+        <small class="copyright">Design por  <a class="app-link" href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a></small>
 	       
 	    </div>
     </footer><!--//app-footer-->
