--- a/src/views/html/admin/index.ejs
+++ b/src/views/html/admin/index.ejs
@@ -142,7 +142,7 @@
 		<footer class="app-footer fixed-bottom">
 			<div class="container text-center py-3">
 				 <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
-			<small class="copyright">Design por <i class="fas fa-heart" style="color: #fb866a;"></i> <a class="app-link" href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a></small>
+			<small class="copyright">Design por  <a class="app-link" href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a></small>
 			   
 			</div>
 		</footer><!--//app-footer-->
