--- a/src/views/html/user/nav.ejs
+++ b/src/views/html/user/nav.ejs
@@ -57,7 +57,7 @@
 						
 					    <li class="nav-item">
 					        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ -->
-					        <a class="nav-link active" href="#">
+					        <a class="nav-link active" href="<%- `/index/${userId}` %>">
 		                         <span class="nav-link-text">Início</span>
 					        </a><!--//nav-link-->
 					    </li><!--//nav-item-->
@@ -68,47 +68,8 @@
 		                         <span class="nav-link-text">Docs</span>
 					        </a><!--//nav-link-->
 					    </li><!--//nav-item-->
-					    <li class="nav-item has-submenu">
-					        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ -->
-					        <a class="nav-link submenu-toggle" href="#" data-bs-toggle="collapse" data-bs-target="#submenu-1" aria-expanded="false" aria-controls="submenu-1">
-						       
-		                         <span class="nav-link-text">Pages</span>
-		                         <span class="submenu-arrow">
-		                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-	  <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
-	</svg>
-	                             </span><!--//submenu-arrow-->
-					        </a><!--//nav-link-->
-					        <div id="submenu-1" class="collapse submenu submenu-1" data-bs-parent="#menu-accordion">
-						        <ul class="submenu-list list-unstyled">
-							        <li class="submenu-item"><a class="submenu-link" href="#">Notifications</a></li>
-							        <li class="submenu-item"><a class="submenu-link" href="#">Account</a></li>
-							        <li class="submenu-item"><a class="submenu-link" href="#">Settings</a></li>
-							        
-						        </ul>
-					        </div>
-					    </li><!--//nav-item-->
-					    <li class="nav-item has-submenu">
-					        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ -->
-					        <a class="nav-link submenu-toggle" href="#" data-bs-toggle="collapse" data-bs-target="#submenu-2" aria-expanded="false" aria-controls="submenu-2">
-						        
-		                         <span class="nav-link-text">External</span>
-		                         <span class="submenu-arrow">
-		                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-	  <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
-	</svg>
-	                             </span><!--//submenu-arrow-->
-					        </a><!--//nav-link-->
-					        <div id="submenu-2" class="collapse submenu submenu-2" data-bs-parent="#menu-accordion">
-						        <ul class="submenu-list list-unstyled">
-							        <li class="submenu-item"><a class="submenu-link" href="#">Login</a></li>
-							        <li class="submenu-item"><a class="submenu-link" href="#">Signup</a></li>
-							        <li class="submenu-item"><a class="submenu-link" href="#">Reset password</a></li>
-							        <li class="submenu-item"><a class="submenu-link" href="#">404 page</a></li>
-						        </ul>
-					        </div>
-					    </li><!--//nav-item-->
-					    
+					  
+					   
 					    <li class="nav-item">
 					        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ -->
 					        <a class="nav-link" href="#">
